--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-node-restarter",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "A cli tool for restarting your node.js server when files change",
   "main": "./dist/ts-node-restarter.js",
   "types": "./dist/ts-node-restarter.d.ts",
@@ -29,5 +29,10 @@
   "bin": {
     "ts-node-restarter": "./dist/ts-node-restarter.js"
   },
-  "watch": ["src"]
+  "watch": [
+    "src"
+  ],
+  "devDependencies": {
+    "typescript": "^4.4.4"
+  }
 }
